--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,11 @@ img {
 
 .description {
     padding:120px 0 120px 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 255, 0.15), rgba(0, 0, 255, 0.15)), url(/images/people-office\ 1\ \(1\).jpg);
+    background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  color: #fff;
 }
 
 .visually-hidden {
