--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,8 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;    
     color:#2e2f42;
-    display: inline-block;
-    margin-right: 76px;}
+    display: inline-block;}
+
 .logo { 
     font-family:'Raleway', sans-serif;
     font-style: normal;
@@ -72,41 +72,29 @@ img {
     text-transform: uppercase;
     color: #4d5ae5;
     text-decoration: none;
-    margin-right: 76px}
+    display: inline-block;
+    margin-right: 76px;}
+
 .address {font-style: normal;
          display: flex;
          gap: 40px;
+         margin-left: auto;
 }
-.site {font-weight: 500;
-    color:#2e2f42; 
-    line-height: 1.5;   
-    letter-spacing: 0.02em;
-    text-transform: uppercase; 
-    text-decoration: none;
+.site {
     display: flex;
-    gap: 40px;
-    margin-right: 40px;
+    gap: 40px;;
 }
 
 .link {font-weight: 500;
     color:#2e2f42; 
     line-height: 1.5;   
     letter-spacing: 0.02em;
-    text-transform: uppercase; 
     text-decoration: none;
     padding: 24px 0 24px 0;
-    margin-right: 40px;
     display: flex;
     align-items: center;
 }
-.nav {font-weight: 500;
-    color:#2e2f42; 
-    line-height: 1.5;   
-    letter-spacing: 0.02em;
-    text-transform: uppercase; 
-    text-decoration: none;
-    margin-right: 40px;
-    display: flex;
+.nav {display: flex;
     align-items: center;
 
 }
@@ -136,15 +124,25 @@ img {
 /* block hero */
 
 .header {background:#2e2f42;
-        padding:188px 0 188px 0}
+        padding:188px 0 188px 0;
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), #2f303a66), url(../images/people-office.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;}
+
 .main-header {font-weight: 600;
     font-size: 56px;
-    line-height: 1.07;
+    line-height: 60px;
     text-align: center;
     letter-spacing: 0.02em;
     color:#ffffff;
     margin: 0;
     max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+    ;
+    
 }    
 
 /* button */
@@ -163,7 +161,8 @@ img {
     display: block;
     min-width: 169px;
     height: 56px;
-    border-radius: 4px;}  
+    border-radius: 4px;
+    margin: 0 auto;}  
       
 .button:hover {background-color: #404BBF; }   
 .button:focus {background-color: #404BBF; }
@@ -172,10 +171,6 @@ img {
 
 .description {
     padding:120px 0 120px 0;
-    background-image: url(/images/photo1.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
 }
 
 .visually-hidden {
@@ -205,6 +200,13 @@ img {
 
 .description-li {
     width: calc((100% - 72px) / 4)
+}
+
+.icons {
+    margin-top: 16px;
+    padding-left: 27px;
+    padding-right: 27px;
+    justify-content: space-between;
 }
 
 .description-text {color:#434455;
@@ -242,6 +244,7 @@ img {
 .team-ul-first {
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    background-color: #ffffff;
 }
 
 .team-header-name {font-weight: 500;
@@ -265,7 +268,7 @@ img {
 
 .portfolio {background:var(--other-background-color);
     padding: 120px 0 120px 0;}
-.portfolio-header {font-weight: 500;
+.portfolio-header {font-weight: 700;
                     font-size: 36px;
                     line-height: 1.11;    
                     letter-spacing: 0.02em;
@@ -307,17 +310,18 @@ img {
 
 .footer {background-color: #2e2f42;
         padding:100px 0;}
-.footer.studio {color: #f4f4fd; }
-.footer.text {color: #F4F4FD;
+.studio {color: #f4f4fd; }
+.text {color: #F4F4FD;
     line-height: 1.5;
-              letter-spacing: 0.02em;}
+    letter-spacing: 0.02em;
+    max-width: 264px;}
 
-.logo { 
+.logo-footer { 
     font-family:'Raleway', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-   line-height: 1.17;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -325,7 +329,46 @@ img {
     display: inline-block;
     margin-bottom: 16px;}
 
+.socialtext {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #FFFFFF;
+    }
 
+   .social-title {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        margin: 12px 0 20px 0;
+        text-transform: uppercase;
+        color: var(--second-accent-color);
+      }
+    .icons.list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 170px;
+        height: 92px;
+        border: 1px solid var(--icons-color);
+        border-radius: 4px;
+        fill: var(--icons-color);
+      }
+    .social.link {
+        border-radius: 50%;
+        background: rgba(255, 255, 255, 0.1);
+        fill: var(--second-accent-color);
+      }
+    .social.link:hover {
+        background: var(--accent-color);
+      }
+      .social-block {
+        margin-left: 70px;
+      }
 /* hiden title */
 
 .hide {transition: all ease 0.8s;}    
