--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ img {
 .header-main {
     display: flex;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   }
 
 .header-container {
@@ -125,10 +126,11 @@ img {
 
 .header {background:#2e2f42;
         padding:188px 0 188px 0;
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), #2f303a66), url(../images/people-office.png);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.png);
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: center;}
+        background-position: center;
+        max-width: 1440px;}
 
 .main-header {font-weight: 600;
     font-size: 56px;
@@ -162,7 +164,8 @@ img {
     min-width: 169px;
     height: 56px;
     border-radius: 4px;
-    margin: 0 auto;}  
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}  
       
 .button:hover {background-color: #404BBF; }   
 .button:focus {background-color: #404BBF; }
@@ -203,10 +206,14 @@ img {
 }
 
 .icons {
-    margin-top: 16px;
-    padding-left: 27px;
-    padding-right: 27px;
-    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
 }
 
 .description-text {color:#434455;
