--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ img {
 
 .header {background:#2e2f42;
         padding:188px 0 188px 0;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.png);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -232,7 +232,8 @@ img {
 /* our team */
 
 .team {background:#F4F4FD;
-    padding: 120px 0 120px 0;}
+    padding: 120px 0 120px 0;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);}
 .team-header {font-weight: 600;
     font-size: 36px;
     line-height: 1.11;    
@@ -272,6 +273,43 @@ img {
     padding: 32px 0 32px 0;
 }
 
+.icons.list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--icons-color);
+    border-radius: 4px;
+    fill: var(--icons-color);  
+  }
+
+.icon.item {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social.link {
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+    fill: var(--second-accent-color);
+    background-color: #4d5ae5;
+    justify-content: center;
+  }
+
+.social.link:hover {
+    background-color: #404bbf;
+}
+
+.social.link:focus {
+    background-color: #404bbf;
+}
+.center {
+    fill: #f4f4fd;
+}
+
 /* portfolio */
 
 .portfolio {background:var(--other-background-color);
@@ -305,6 +343,12 @@ img {
 
 .portfolio-li {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-li:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 
 .container-portfolio {
@@ -312,6 +356,26 @@ img {
     border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
+}
+
+.image-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.image-text {
+    position:absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* footer */
@@ -322,6 +386,10 @@ img {
 .footer-container {
     display: flex;
     align-items: baseline;
+}
+
+.footer1 {
+    margin-right: 120px;
 }
 
 .studio {color: #f4f4fd; }
@@ -353,34 +421,44 @@ img {
     color: #FFFFFF;
     }
 
+.icons-list {
+  display: flex;
+  gap: 16px;  
+}
+
+.iconitem {
+    width: 40px;
+    height: 40px;
+}
+
+
+.social-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+
+.social-link:hover {
+    background-color: #31d0aa;
+}
+
+.social-link:focus {
+    background-color: #31d0aa;
+}
+
    .social-title {
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 16px;
-        letter-spacing: 0.03em;
-        margin: 12px 0 20px 0;
-        text-transform: uppercase;
-        color: var(--second-accent-color);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin-bottom: 16px;
       }
-    .icons.list {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 24px;
-        width: 170px;
-        height: 92px;
-        border: 1px solid var(--icons-color);
-        border-radius: 4px;
-        fill: var(--icons-color);
-      }
-    .social.link {
-        border-radius: 50%;
-        background: rgba(255, 255, 255, 0.1);
-        fill: var(--second-accent-color);
-      }
-    .social.link:hover {
-        background: var(--accent-color);
-      }
+
       .social-block {
         margin-left: 70px;
       }
