--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,30 @@ img {
 }
 .nav {display: flex;
     align-items: center;
+    position: relative;
+    color: #404bbf;
+}
+
+.currentlink {font-weight: 500;
+    color:#2e2f42; 
+    line-height: 1.5;   
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    padding: 24px 0 24px 0;
+    display: flex;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.currentlink::after {
+    content:"";
+    width: 100%;
+    position:absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 
 }
 
@@ -110,6 +134,7 @@ img {
     letter-spacing: 0.02em;
     display: flex;
     gap: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail, .ul .style {color:#434455;
@@ -294,7 +319,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .social.link {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
-    fill: var(--second-accent-color);
+    height: 100%;
     background-color: #4d5ae5;
     justify-content: center;
   }
@@ -307,6 +332,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     background-color: #404bbf;
 }
 .center {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: #f4f4fd;
 }
 
@@ -429,6 +455,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .iconitem {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
