--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     fill: var(--icons-color);  
   }
 
-.icon.item {
+.socialmedia {
     width: 40px;
     height: 40px;
 }
@@ -377,6 +377,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 
 .portfolio-li:hover {
+    transform: translateY(0%);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
@@ -394,7 +395,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .image-container:hover {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(0%);
 }
 
 .image-text {
