--- a/css/styles.css
+++ b/css/styles.css
@@ -377,8 +377,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 
 .portfolio-li:hover {
-    transform: translateY(0%);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-li:hover .image-text {
+    transform: translateY(0%);
 }
 
 .container-portfolio {
