--- a/css/styles.css
+++ b/css/styles.css
@@ -312,11 +312,13 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .socialmedia {
     height: 40px;
+    width: 100%;
 }
 
 .social.link {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+    height: 100%;
     background-color: #4d5ae5;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
