--- a/css/styles.css
+++ b/css/styles.css
@@ -304,7 +304,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     align-items: center;
     gap: 24px;
     width: 40px;
-    height: 40px;
+    height: 100%;
     border: 1px solid var(--icons-color);
     border-radius: 4px;
     fill: var(--icons-color);  
@@ -312,7 +312,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .socialmedia {
     height: 40px;
-    width: 100%;
+    width: 40px;
 }
 
 .social.link {
