--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     height: 40px;
 }
 
-.sociallink {
+.social.link {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
     width: 100%;
