--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,9 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .socialmedia {
     width: 40px;
     height: 40px;
+    gap: 0px;
+    opacity: 0px;
+    
 }
 
 .social.link {
