--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .container-name {
     padding: 32px 0 32px 0;
+    
 }
 
 .icons.list {
@@ -303,24 +304,21 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     justify-content: center;
     align-items: center;
     gap: 24px;
-    width: 40px;
+    width: 100%;
     height: 100%;
     border-radius: 4px; 
   }
 
 .socialmedia {
     width: 40px;
-    height: 40px;
-    gap: 0px;
-    opacity: 0px;
-    
+    height: 40px;    
 }
 
 .social.link {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
     width: 100%;
-    height: 100%;
+    height:100%;
     background-color: #4d5ae5;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
