--- a/css/styles.css
+++ b/css/styles.css
@@ -305,19 +305,19 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     align-items: center;
     gap: 24px;
     width: 100%;
-    height: 100%;
+    height: 40px;
     border-radius: 4px; 
   }
 
 .socialmedia {
     width: 40px;
-    height: 40px;    
+    height: 100%;    
 }
 
 .social.link {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
-    width: 100%;
+    width: 40px;
     height:100%;
     background-color: #4d5ae5;
     justify-content: center;
