--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     align-items: center;
     gap: 24px;
     width: 100%;
-    height: 40px;
+    height: 100%;
     border-radius: 4px; 
   }
 
