--- a/css/styles.css
+++ b/css/styles.css
@@ -311,14 +311,14 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .socialmedia {
     width: 40px;
-    height: 100%;    
+    height: 40px;    
 }
 
 .social.link {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
     width: 40px;
-    height:100%;
+    height: 40px;
     background-color: #4d5ae5;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
