--- a/css/styles.css
+++ b/css/styles.css
@@ -296,12 +296,10 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .container-name {
     padding: 32px 0 32px 0;
-    width: 232px;
-    height: 40px;
-    gap: 24px;
-    opacity: 0px;
-
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;    
 }
 
 .icons.list {
