--- a/css/styles.css
+++ b/css/styles.css
@@ -303,8 +303,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     justify-content: center;
     align-items: center;
     gap: 24px;
-    width: 100%;
-    height: 100%;
     border-radius: 4px; 
   }
 
@@ -319,7 +317,9 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
+    display: flex;
     justify-content: center;
+    align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
