--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
                 text-align: center;}   
 
 .container-name {
-    padding: 32px 0 32px 0;
+    padding: 32px 0 32px;
 }
 
 .icons.list {
@@ -314,12 +314,12 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .socialmedialink {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+    display: flex;
     width: 100%;
     height: 100%;
+    align-items: center; 
+    justify-content: center;    
     background-color: #4d5ae5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
   }
 
